plugins {
    id 'java'
}

group 'com.romangarms'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}
jar {
    manifest {
        attributes 'Main-Class': 'com.romangarms.Server'
    }
}

java {
    sourceCompatibility = "1.8"
    targetCompatibility = "1.8"
}

repositories {
    flatDir {
        dirs 'lib'
    }
}

dependencies { implementation name: 'http' }